@@ -2,6 +2,8 @@ All notable changes to this package will be documented in this file. For a
 complete changelog, see https://github.com/JolleJolles/pythutils/commits/
 
 Not yet integrated
+    * Added get_spaced_colors function for getting a list of equally spaced
+      colors on the color spectrum
 
 2019-12-24 - version 1.1.5
     * roi_to_zoom function now rounds the zoom values
